syntax = "proto3";

package pb;

option go_package = "./pkg/pb";

service VideoService {
    rpc HealthCheck(Request) returns (Response);
    rpc UploadVideo(stream UploadVideoRequest) returns (UploadVideoResponse) {}
    rpc FindArchivedVideoByUserId(FindArchivedVideoByUserIdRequest) returns (FindArchivedVideoByUserIdResponse) {}
    rpc FindUserVideo(FindUserVideoRequest) returns (FindUserVideoResponse) {}
    rpc ArchiveVideo(ArchiveVideoRequest) returns (ArchiveVideoResponse) {}
}


message Request {
    string data = 1;
  }
  
  message Response {
    string result = 1;
  }
  

message UploadVideoRequest {
    string userName = 1;
    string avatarId = 2;
    string intrest = 3;
    string thumbnailId = 4;
    string title = 5;
    string discription = 6;
    string filename = 7;
    bytes data = 8;
}

message UploadVideoResponse {
    int32 status = 1;
    string message = 2;
    string videoId = 3;
}

message StreamVideoRequest {
    string videoId = 1;
}

message StreamVideoResponse {
    bytes video_chunk = 1;
}

message FindArchivedVideoByUserIdRequest {
    string userName = 1;
}

message FetchVideo {
    uint32 VideoId = 1;
    string userName = 2;
    string avatarId = 3;
    string intrest = 4;
    string thumbnailId = 5;
    string title = 6;
    string S3Path = 7;
}

message FindArchivedVideoByUserIdResponse {
    repeated FetchVideo videos = 1;
}

message FindUserVideoRequest {
    string userName =1;
}

message FindUserVideoResponse {
    repeated FetchVideo videos = 1;
}

message ArchiveVideoRequest {
    uint32 videoId = 1;
}
message ArchiveVideoResponse{
    bool status = 1;
}
